@@ -1,0 +1,4 @@
+<project>
+  <target name="t"/>
+  <target name="t"/>
+</project>
