@@ -1,0 +1,3 @@
+<project>
+  <import file="import_same_target.xml"/>
+</project>
